# simdpy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  pytest.ini  simdpy_add.cpp
tests/: test_simdpy.py
